# repodocmake

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/docforgeai/: __init__.py  action_entry.py  cli.py  config.py  models.py  pipeline.py  vcs.py
src/docforgeai/analyzer/: __init__.py  repo_scanner.py
src/docforgeai/generators/: base.py
src/docforgeai/llm/: __init__.py  prompts.py  provider.py
src/repodocmake/: __init__.py  cli.py  config.py  models.py  pipeline.py  vcs.py
src/repodocmake/analyzer/: ast_profiler.py
src/repodocmake/generators/: __init__.py  license.py
src/repodocmake/llm/: prompts.py  provider.py
tests/: test_pipeline.py  test_repo_scanner.py  test_vcs.py
