[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repodocmake"
version = "0.1.0"
description = "AI-powered open-source documentation generator (GitHub Action + CLI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "RepoDocMake Team" }]
keywords = ["documentation", "ai", "llm", "github-action", "readme", "oss"]
dependencies = [
    "pydantic>=2.6",
    "litellm>=1.40",
    "click>=8.1",
    "PyGithub>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
repodocmake = "repodocmake.cli:main"

[project.urls]
Homepage = "https://github.com/Pablo-korea/repodocmake"

[tool.hatch.build.targets.wheel]
packages = ["src/repodocmake"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
